k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exp-dashboard-app
  namespace: data-ingestion
spec:
  selector:
    app: exp-dashboard-app
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
