k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exp-dashboard-app
  namespace: data-ingestion
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/limit-rps: "20"
spec:
  tls:
    - hosts:
        - exp-dashboard.educateapps.work
      secretName: exp-dashboard-app-tls
  rules:
    - host: exp-dashboard.educateapps.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: exp-dashboard-app
                port:
                  number: 80
